--- a/src/Templates/page.twig
+++ b/src/Templates/page.twig
@@ -12,7 +12,7 @@
         }
 
         .sidebar {
-            position: fixed;
+            position: sticky;
             top: 4em;
             bottom: 0;
             left: 0;
@@ -20,10 +20,22 @@
             box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
             width: 220px;
             z-index: 600;
+            clear: none;
+        }
+
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
         }
 
         main {
+            position: fixed;
+            top: 4em;
+            bottom: 0;
             padding-left: 240px;
+            overflow-y: scroll;
         }
     </style>
 </head>
@@ -61,7 +73,6 @@
 
         <nav id="sidebar" class="sidebar ms-1 ps-2">
             <div class="mb-3">
-
                 <ul class="nav flex-column">
                     {% for section in versionConfig.directory %}
                         <li>
