--- a/src/Templates/projinom.php.twig
+++ b/src/Templates/projinom.php.twig
@@ -11,6 +11,8 @@ return [
             'label' => 'Github',
             'url' => 'https://github.com/volktron/projinom'
         ]
-    ]
+    ],
     */
+
+    'index' => 'index'
 ];
