--- a/src/Templates/page.twig
+++ b/src/Templates/page.twig
@@ -59,7 +59,7 @@
                                     {% if version != '' %}
                                         {{ version }}
                                     {% else %}
-                                        Select Version
+                                        Docs
                                     {% endif %}
                                 </button>
                                 <ul class="dropdown-menu">
