Reorganized code and renamed some classes to be PSR compliant

--- a/src/Templates/page.twig
+++ b/src/Templates/page.twig
@@ -33,6 +33,7 @@
         {% if mode == 'version' %}
         main {
             position: fixed;
+            width: 100%;
             top: 4em;
             bottom: 0;
             padding-left: 240px;
