--- a/src/Templates/page.twig
+++ b/src/Templates/page.twig
@@ -11,37 +11,40 @@
             text-shadow: none;
         }
 
-        .sidebar {
-            position: sticky;
-            top: 4em;
-            bottom: 0;
-            left: 0;
-            padding: 0 0; /* Height of navbar */
-            box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
-            width: 220px;
-            z-index: 600;
-            clear: none;
-        }
-
         header {
             position: fixed;
             top: 0;
             left: 0;
             right: 0;
+            z-index: 3;
+        }
+
+        .sidebar {
+            position: sticky;
+            margin-top: 4em;
+            bottom: 0;
+            left: 0;
+            padding: 0 0; /* Height of navbar */
+            box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+            width: 220px;
+            clear: none;
+            z-index: 2;
         }
 
         {% if mode == 'version' %}
-        main {
+        .tab-content {
             position: fixed;
             width: 100%;
             top: 4em;
             bottom: 0;
             padding-left: 240px;
             overflow-y: scroll;
+            z-index: 1;
         }
         {% else %}
-        main {
+        .tab-content {
             margin: 4em 2em 4em 2em;
+            z-index: 1;
         }
         {% endif %}
     </style>
@@ -73,7 +76,7 @@
 
                         {% for headerLink in config.header_links %}
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{{ headerLink.url }}">{{ headerLink.label }}</a>
+                                <a class="nav-link ms-2" aria-current="page" href="{{ headerLink.url }}">{{ headerLink.label }}</a>
                             </li>
                         {% endfor %}
                     </ul>
@@ -81,7 +84,8 @@
 
             </div>
         </nav>
-
+    </header>
+    <main>
         {% if mode == 'version' %}
             <nav id="sidebar" class="sidebar ms-1 ps-2">
                 <div class="mb-3">
@@ -92,7 +96,7 @@
                             </li>
                             {% for page in section.pages %}
                                 <li class="nav-item">
-                                    <button class="nav-link pt-1 pb-1"
+                                    <button class="nav-link pt-1 pb-1 pointer"
                                             data-bs-toggle="tab"
                                             data-bs-target="#{{ page }}">{{ page }}</button>
                                 </li>
@@ -102,23 +106,24 @@
                 </div>
             </nav>
         {% endif %}
-    </header>
-    <main>
-        {% if mode == 'version' %}
-            <div class="tab-content mt-3">
-                {% for section in versionConfig.directory %}
-                    {% for page in section.pages %}
-                        <section class="tab-pane fade" id="{{ page }}">
-                            <div class="container">
-                                {{ section.pageContent[page]|raw }}
-                            </div>
-                        </section>
+
+        <div id="content">
+            {% if mode == 'version' %}
+                <div class="tab-content mt-3">
+                    {% for section in versionConfig.directory %}
+                        {% for page in section.pages %}
+                            <section class="tab-pane fade" id="{{ page }}">
+                                <div class="container">
+                                    {{ section.pageContent[page]|raw }}
+                                </div>
+                            </section>
+                        {% endfor %}
                     {% endfor %}
-                {% endfor %}
-            </div>
-        {% elseif mode == 'standalone' %}
-            {{ standaloneContent|raw }}
-        {% endif %}
+                </div>
+            {% elseif mode == 'standalone' %}
+                {{ standaloneContent|raw }}
+            {% endif %}
+        </div>
     </main>
     <script
             src="https://code.jquery.com/jquery-3.7.0.min.js"
