Fixed positioning issue for standalone pages

--- a/src/Templates/page.twig
+++ b/src/Templates/page.twig
@@ -32,7 +32,7 @@
         }
 
         {% if mode == 'version' %}
-        .tab-content {
+        #content {
             position: fixed;
             width: 100%;
             top: 4em;
@@ -42,7 +42,7 @@
             z-index: 1;
         }
         {% else %}
-        .tab-content {
+        #content {
             margin: 4em 2em 4em 2em;
             z-index: 1;
         }
