--- a/src/Templates/projinom.php.twig
+++ b/src/Templates/projinom.php.twig
@@ -4,6 +4,7 @@ return [
     'name' => '{{ name }}',
     'type' => '{{ type }}',
     'versions_directory' => '{{ versions_directory }}',
+    'max_versions' => 3,
 
     /**
     'header_links' => [
