--- a/src/Templates/page.twig
+++ b/src/Templates/page.twig
@@ -72,6 +72,10 @@
                                             <li><a class="dropdown-item" href="{{ outputVersion }}.html">{{ outputVersion }}</a></li>
                                         {% endif %}
                                     {% endfor %}
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="versions.html">All</a></li>
                                 </ul>
                             </div>
                         </li>
