Display a list of versions

--- a/src/Templates/versions.twig
+++ b/src/Templates/versions.twig
@@ -1,3 +1,9 @@
 <div class="container-fluid">
     <h1>Versions</h1>
+    <p>Below you can find every available version's documentation.</p>
+    <ul class="list-group">
+        {% for outputVersion in versionDirectories %}
+            <button class="list-group-item list-group-item-action"><a href="{{ outputVersion }}.html">{{ outputVersion }}</a></button>
+        {% endfor %}
+    </ul>
 </div>
