--- a/src/Templates/versions.twig
+++ b/src/Templates/versions.twig
@@ -1,9 +1,15 @@
 <div class="container-fluid">
     <h1>Versions</h1>
     <p>Below you can find every available version's documentation.</p>
-    <ul class="list-group">
-        {% for outputVersion in versionDirectories %}
-            <button class="list-group-item list-group-item-action"><a href="{{ outputVersion }}.html">{{ outputVersion }}</a></button>
+    <div class="row">
+        {% for versions in majorVersions %}
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
+                <ul class="list-group">
+                    {% for outputVersion in versions %}
+                        <button class="list-group-item list-group-item-action"><a href="{{ outputVersion }}.html">{{ outputVersion }}</a></button>
+                    {% endfor %}
+                </ul>
+            </div>
         {% endfor %}
-    </ul>
+    </div>
 </div>
