Default dist path now available in projinom.php, settable via the init command.

--- a/src/Templates/projinom.php.twig
+++ b/src/Templates/projinom.php.twig
@@ -3,6 +3,7 @@
 return [
     'name' => '{{ name }}',
     'type' => '{{ type }}',
+    'dist_path' => '{{ dist_path }}',
     'versions_directory' => '{{ versions_directory }}',
     'max_versions' => 3,
 
