--- a/docsource/page.twig
+++ b/docsource/page.twig
@@ -3,47 +3,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ config.name }}</title>
-    <style>
-        .token {
-            text-shadow: none;
-        }
-
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 3;
-        }
-
-        .sidebar {
-            position: sticky;
-            margin-top: 4em;
-            bottom: 0;
-            left: 0;
-            padding: 0 0; /* Height of navbar */
-            width: 220px;
-            clear: none;
-            z-index: 2;
-        }
-
-        {% if mode == 'version' %}
-        #content {
-            position: fixed;
-            width: 100%;
-            top: 4em;
-            bottom: 0;
-            padding-left: 240px;
-            overflow-y: scroll;
-            z-index: 1;
-        }
-        {% else %}
-        #content {
-            margin: 4em 2em 4em 2em;
-            z-index: 1;
-        }
-        {% endif %}
-    </style>
 </head>
 <body>
     <header>
@@ -96,7 +55,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="{% if mode == 'version' %}mode-version{% endif %}">
         {% if mode == 'version' %}
             <nav id="sidebar" class="sidebar ms-1 ps-2">
                 <div class="mb-3">
