Compiled CSS now in a separate file and <link>'d into the html.

--- a/js/src/projinom.scss
+++ b/js/src/projinom.scss
@@ -1,3 +1,6 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'prismjs/themes/prism-tomorrow.min.css';
+
 .token {
   text-shadow: none;
 }
