Display sidebar on squished view at the top instead of hiding it

--- a/js/src/projinom.scss
+++ b/js/src/projinom.scss
@@ -45,10 +45,13 @@ main:not(.mode-version) {
 
 @media(width <= 750px) {
   .sidebar {
-    display: none;
+    /* display: none; */
+    position: relative;
   }
 
   #content {
     padding-left: 0 !important;
+    position: relative !important;
+    top: 0 !important;
   }
 }
