--- a/docs/main.css
+++ b/docs/main.css
@@ -53,9 +53,11 @@ main:not(.mode-version) #content {
 
 @media (width <= 750px) {
   .sidebar {
-    display: none;
+    position: relative;
   }
   #content {
     padding-left: 0 !important;
+    position: relative !important;
+    top: 0 !important;
   }
 }
